Initial attempt (seems working) to upgrade to dotnet 5

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-
+<div class="page">
 <header>
     <div class="container">
         <div class="d-grid gap-3">
@@ -26,3 +26,4 @@
         <Footer />
     </div>
 </footer>
+</div>
