Adding Quality Calculator to menu

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border box-shadow mb-3">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="">
                 <img src="images/Channel_Icon_small.png" alt="" width="24" height="24">
             </a>
@@ -24,12 +24,13 @@
                             <span class="oi oi-pencil" aria-hidden="true"></span> Blog
                         </NavLink>
                     </li>
-                    <li class="nav-item dropdown ml-auto">
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             More unshaped Stuff
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">PC Rig</a></li>
+                            <li><a class="dropdown-item" href="qualitycalc">Quality Calculator</a></li>
                             <li><a class="dropdown-item" href="#">Contact</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Steam</a></li>
