Added FF to drop down

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -31,6 +31,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">PC Rig</a></li>
                             <li><a class="dropdown-item" href="qualitycalc">Quality Calculator</a></li>
+                            <li><a class="dropdown-item" href="ff">Fighting Fantasy</a></li>
                             <li><a class="dropdown-item" href="#">Contact</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="#">Steam</a></li>
